@@ -2098,9 +2098,6 @@ void child_main(int child_num_arg)
     child_num = child_num_arg;
     requests_this_child = 0;
 
-    reopen_scoreboard(pconf);
-    (void)update_child_status(child_num, SERVER_READY, (request_rec*)NULL);
-
 #ifdef MPE
     /* Only try to switch if we're running as MANAGER.SYS */
     if (geteuid() == 1 && user_id > 1) {
@@ -2118,6 +2115,11 @@ void child_main(int child_num_arg)
         GETUSERMODE();
     }
 #endif
+
+    child_init_modules(pconf, server_conf);
+
+    reopen_scoreboard(pconf);
+    (void)update_child_status(child_num, SERVER_READY, (request_rec*)NULL);
 
     /*
      * Setup the jump buffers so that we can return here after
