@@ -185,5 +185,6 @@ module MODULE_VAR_EXPORT browser_module = {
    NULL,			/* type_checker */
    NULL,			/* fixups */
    NULL,			/* logger */
-   parse_headers_browser_module	/* header parser */
+   parse_headers_browser_module,/* header parser */
+   NULL				/* child_init */
 };
