@@ -126,5 +126,6 @@ module MODULE_VAR_EXPORT asis_module = {
    NULL,			/* type_checker */
    NULL,			/* pre-run fixups */
    NULL,			/* logger */
-   NULL				/* header parser */
+   NULL,			/* header parser */
+   NULL				/* child_init */
 };
