@@ -2053,5 +2053,6 @@ module includes_module = {
     NULL,                        /* type_checker */
     NULL,                        /* fixups */
     NULL,                        /* logger */
-    NULL                         /* header parser */
+    NULL,                        /* header parser */
+    NULL			 /* child_init */
 };
