@@ -452,5 +452,6 @@ module MODULE_VAR_EXPORT info_module = {
 	NULL,				/* type_checker */
 	NULL,				/* fixups */
 	NULL,				/* logger */
-	NULL				/* header parser */
+	NULL,				/* header parser */
+	NULL				/* child_init */
 };
