@@ -198,5 +198,6 @@ module agent_log_module = {
    NULL,			/* type_checker */
    NULL,			/* fixups */
    agent_log_transaction,	/* logger */
-   NULL				/* header parser */
+   NULL,			/* header parser */
+   NULL				/* child_init */
 };
