@@ -789,5 +789,6 @@ module MODULE_VAR_EXPORT config_log_module = {
    NULL,			/* type_checker */
    NULL,			/* fixups */
    multi_log_transaction,	/* logger */
-   NULL				/* header parser */
+   NULL,			/* header parser */
+   NULL				/* child_init */
 };
