@@ -236,5 +236,6 @@ module referer_log_module = {
    NULL,			/* type_checker */
    NULL,			/* fixups */
    referer_log_transaction,	/* logger */
-   NULL				/* header parser */
+   NULL,			/* header parser */
+   NULL				/* child_init */
 };
