@@ -217,7 +217,8 @@ module rewrite_module = {
 
    hook_fixup,                  /* [#7] pre-run fixups */
    NULL,                        /* [#9] log a transaction */
-   NULL                         /* [#3] header parser */
+   NULL,                        /* [#3] header parser */
+   NULL				/* child_init */
 };
 
     /* the cache */
