@@ -337,5 +337,6 @@ module userdir_module = {
    NULL,                        /* type_checker */
    NULL,                        /* fixups */
    NULL,                        /* logger */
-   NULL                         /* header parser */
+   NULL,                        /* header parser */
+   NULL				/* child_init */
 };
