@@ -1,5 +1,9 @@
 Changes with Apache 1.3
   
+  *) API: Added child_init function to module structure.  This is called
+     once per "heavy-weight process" before any requests are handled.
+     See http_config.h for more details.  [Dean Gaudet]
+  
   *) Anonymous_LogEmail was logging on each subrequest.
      [Dean Gaudet] PR#421, 868
 
